--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
-		"@tailwindcss/vite": "^4.1.11"
+		"@tailwindcss/vite": "^4.1.11",
+		"svelte-icons": "^2.1.0"
 	}
 }
